adding image with pathlink

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <body>
     <header>
       <h1>Anja Siewert</h1>
-      <img
-        src="https://github.com/AnjaSiewert/personal-wegpage/blob/c2712e470ecb765aa88ab9add9052194890809fe/images/4N8A6015.jpg"
-        alt="profile picture"
-        width="200px"
-      />
+      <img src="images/4N8A6015.jpg" alt="profile picture" width="150px" />
       <a href="#">Contact details</a>
       <a href="#">Biography</a>
       <h2>My interests:</h2>
