--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Anja Siewert</h1>
       <img src="images/4N8A6015.jpg" alt="profile picture" width="150px" />
-      <a href="#">Contact details</a>
+      <a href="#contacts">Contact details</a>
       <a href="#">Biography</a>
       <h2>My interests:</h2>
       <ul>
@@ -20,6 +20,12 @@
         <li>Reading</li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <fieldset id="contacts">
+        Contact details
+        <p>Address: Kranichweg 6C, 22305 Hamburg</p>
+        <p>Mail: anja.siewert@live.de</p>
+      </fieldset>
+    </main>
   </body>
 </html>
