--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
             width="80px"
           />LinkedIn</a
         >
-        <a></a>
       </fieldset>
-      <fieldset id="biography"></fieldset>
+      <fieldset id="biography">
+        <h2>About me</h2>
+        Hi, I am Anja! I used to work in forein trade and supply chain and now I
+        am up for the challenge to enter the world of Web Development!
+      </fieldset>
     </main>
   </body>
+  <footer>
+    <strong
+      >Goodbye! Or as we say in my city: In Hamburg sagt man tschüß!</strong
+    >
+  </footer>
 </html>
