--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <h2>About me</h2>
         Hi, I am Anja! I used to work in forein trade and supply chain and now I
         am up for the challenge to enter the world of Web Development!
+        <p></p>
+        <img src="images/ORG_DSC01851.JPG" width="350px" alt="me-in-myanmar" />
+        <br />
+        <em>Me sitting on a temple in Myanmar on my trip around the world</em>
       </fieldset>
     </main>
   </body>
