--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
       </fieldset>
       <fieldset id="biography">
         <h2>About me</h2>
-        Hi, I am Anja! I used to work in forein trade and supply chain and now I
-        am up for the challenge to enter the world of Web Development!
-        <p></p>
+        Hi, I am Anja! I used to work in forein trade and supply chain. Between
+        my jobs I did a trip around the world and a journey to North America for
+        a few months.
+        <p>
+          Now I am up for the challenge to enter the world of Web Development!
+        </p>
         <img src="images/ORG_DSC01851.JPG" width="350px" alt="me-in-myanmar" />
         <br />
         <em>Me sitting on a temple in Myanmar on my trip around the world</em>
