move footer to body

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <em>Me sitting on a temple in Myanmar on my trip around the world</em>
       </fieldset>
     </main>
+    <footer>
+      <strong
+        >Goodbye! Or as we say in my city: In Hamburg sagt man tschüß!
+      </strong>
+    </footer>
   </body>
-  <footer>
-    <strong
-      >Goodbye! Or as we say in my city: In Hamburg sagt man tschüß!</strong
-    >
-  </footer>
 </html>
