--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <body>
     <header>
       <h1>Anja Siewert</h1>
-      <img src="images/4N8A6015.jpg" alt="profile picture" width="150px" />
+      <img
+        id="profile-picture"
+        src="images/4N8A6015.jpg"
+        alt="profile-picture"
+        width="150px"
+      />
       <a href="#contacts">Contact details</a>
-      <a href="#biography">Biography</a>
+      <a href="#about-me">About me</a>
       <h2>My interests:</h2>
       <ul>
         <li>Travelling</li>
@@ -27,7 +32,7 @@
         <p>Address: Kranichweg 6C, 22305 Hamburg</p>
         <p>Mail: anja.siewert@live.de</p>
       </fieldset>
-      <fieldset>
+      <fieldset id="links-Socials">
         <a href="https://github.com/AnjaSiewert"
           ><img
             src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
@@ -43,7 +48,7 @@
           />LinkedIn</a
         >
       </fieldset>
-      <fieldset id="biography">
+      <fieldset id="about-me">
         <h2>About me</h2>
         Hi, I am Anja! I used to work in forein trade and supply chain. Between
         my jobs I did a trip around the world and a journey to North America for
@@ -51,7 +56,12 @@
         <p>
           Now I am up for the challenge to enter the world of Web Development!
         </p>
-        <img src="images/ORG_DSC01851.JPG" width="350px" alt="me-in-myanmar" />
+        <img
+          id="me-in-myanmar"
+          src="images/ORG_DSC01851.JPG"
+          width="350px"
+          alt="me-in-myanmar"
+        />
         <br />
         <em>Me sitting on a temple in Myanmar on my trip around the world</em>
       </fieldset>
