adding classes in body

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
       <h1>Anja Siewert</h1>
       <img
-        id="profile-picture"
+        class="profile-picture"
         src="images/4N8A6015.jpg"
         alt="profile-picture"
         width="150px"
       />
       <a href="#contacts">Contact details</a>
       <a href="#about-me">About me</a>
-      <h2>My interests:</h2>
+      <h2 class="my-interests">My interests:</h2>
       <ul>
         <li>Travelling</li>
         <li>True Crime</li>
@@ -27,12 +27,12 @@
       </ul>
     </header>
     <main>
-      <fieldset id="contacts">
+      <fieldset class="contacts" id="contacts">
         Contact details
         <p>Address: Kranichweg 6C, 22305 Hamburg</p>
         <p>Mail: anja.siewert@live.de</p>
       </fieldset>
-      <fieldset id="links-Socials">
+      <fieldset class="links-Socials">
         <a href="https://github.com/AnjaSiewert"
           ><img
             src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
@@ -48,7 +48,7 @@
           />LinkedIn</a
         >
       </fieldset>
-      <fieldset id="about-me">
+      <fieldset class="about-me" id="about-me">
         <h2>About me</h2>
         Hi, I am Anja! I used to work in forein trade and supply chain. Between
         my jobs I did a trip around the world and a journey to North America for
