style nav-links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         alt="profile-picture"
         width="150px"
       />
-      <a href="#contacts">Contact details</a>
-      <a href="#about-me">About me</a>
-      <h2 class="my-interests">My interests:</h2>
+      <a class="nav-link" href="#contacts">Contact details</a>
+      <a class="nav-link" href="#about-me">About me</a>
+      <h2 class="my-interests">My interests</h2>
       <ul>
         <li>Travelling</li>
         <li>True Crime</li>
