style list elements

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <a class="nav-link" href="#about-me">About me</a>
       <h2 class="my-interests">My interests</h2>
       <ul>
-        <li>Travelling</li>
-        <li>True Crime</li>
-        <li>Longboard</li>
-        <li>Salsa</li>
-        <li>Reading</li>
+        <li class="travelling">Travelling</li>
+        <li class="true-crime">True Crime</li>
+        <li class="longboard">Longboard</li>
+        <li class="Salsa">Salsa</li>
+        <li class="Reading">Reading</li>
       </ul>
     </header>
     <main>
