adding styles to footer & margins to all

--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
       />
       <a class="nav-link" href="#contacts">Contact details</a>
       <a class="nav-link" href="#about-me">About me</a>
-      <h2 class="my-interests">My interests</h2>
-      <ul>
-        <li class="travelling">Travelling</li>
-        <li class="true-crime">True Crime</li>
-        <li class="longboard">Longboard</li>
-        <li class="Salsa">Salsa</li>
-        <li class="Reading">Reading</li>
-      </ul>
+      <fieldset>
+        <h2 class="my-interests">My interests</h2>
+        <ul>
+          <li class="travelling">Travelling</li>
+          <li class="true-crime">True Crime</li>
+          <li class="longboard">Longboard</li>
+          <li class="salsa">Salsa</li>
+          <li class="reading">Reading</li>
+        </ul>
+      </fieldset>
     </header>
     <main>
       <fieldset class="contacts" id="contacts">
-        Contact details
+        <h2>Contact details</h2>
         <p>Address: Kranichweg 6C, 22305 Hamburg</p>
         <p>Mail: anja.siewert@live.de</p>
       </fieldset>
       <fieldset class="links-Socials">
+        <h2>Social Networks</h2>
         <a href="https://github.com/AnjaSiewert"
           ><img
             src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
@@ -54,9 +57,9 @@
         Hi, I am Anja! I used to work in forein trade and supply chain. Between
         my jobs I did a trip around the world and a journey to North America for
         a few months.
-        <p>
+        <br>
           Now I am up for the challenge to enter the world of Web Development!
-        </p>
+        </br>
         <img
           id="me-in-myanmar"
           src="images/ORG_DSC01851.JPG"
