--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
       </fieldset>
       <fieldset class="about-me" id="about-me">
         <h2>About me</h2>
-        Hi, I am Anja! I used to work in forein trade and supply chain. Between
-        my jobs I did a trip around the world and a journey to North America for
-        a few months.
-        <br>
+        <p>
+          Hi, I am Anja! I used to work in forein trade and supply chain.
+          Between my jobs I did a trip around the world and a journey to North
+          America for a few months.
+        </p>
+        <p>
           Now I am up for the challenge to enter the world of Web Development!
-        </br>
+        </p>
         <img
           id="me-in-myanmar"
           src="images/ORG_DSC01851.JPG"
