add <nav> to links

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         alt="profile-picture"
         width="150px"
       />
-      <a class="nav-link" href="#contacts">Contact details</a>
-      <a class="nav-link" href="#about-me">About me</a>
+      <nav class="nav-link">
+        <a href="#contacts">Contact details</a>
+        <a href="#about-me">About me</a>
+      </nav>
       <fieldset>
         <h2 class="my-interests">My interests</h2>
         <ul>
