add <section html> in header

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
   <body>
     <header>
       <h1>Anja Siewert</h1>
-      <img
-        class="profile-picture"
-        src="images/4N8A6015.jpg"
-        alt="profile-picture"
-        width="150px"
-      />
-      <nav class="nav-link">
-        <a href="#contacts">Contact details</a>
-        <a href="#about-me">About me</a>
-      </nav>
+      <section class="first-section">
+        <img
+          class="profile-picture"
+          src="images/4N8A6015.jpg"
+          alt="profile-picture"
+          width="150px"
+        />
+        <nav class="nav-link">
+          <a href="#contacts">Contact details</a>
+          <a href="#about-me">About me</a>
+        </nav>
+      </section>
       <fieldset>
         <h2 class="my-interests">My interests</h2>
         <ul>
