add class to interests

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
       <fieldset>
         <h2 class="my-interests">My interests</h2>
-        <ul>
+        <ul class="interest-list">
           <li class="travelling">Travelling</li>
           <li class="true-crime">True Crime</li>
           <li class="longboard">Longboard</li>
