--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#about-me">About me</a>
         </nav>
       </section>
-      <fieldset>
+      <fieldset class="fieldset-interests">
         <h2 class="my-interests">My interests</h2>
         <ul class="interest-list">
           <li class="travelling">Travelling</li>
@@ -34,12 +34,12 @@
       </fieldset>
     </header>
     <main>
-      <fieldset class="contacts" id="contacts">
+      <fieldset class="fieldset-contacts" id="contacts">
         <h2>Contact details</h2>
         <p>Address: Kranichweg 6C, 22305 Hamburg</p>
         <p>Mail: anja.siewert@live.de</p>
       </fieldset>
-      <fieldset class="links-Socials">
+      <fieldset class="fieldset-links">
         <h2>Social Networks</h2>
         <a href="https://github.com/AnjaSiewert"
           ><img
@@ -56,7 +56,7 @@
           />LinkedIn</a
         >
       </fieldset>
-      <fieldset class="about-me" id="about-me">
+      <fieldset class="fieldset-aboutme" id="about-me">
         <h2>About me</h2>
         <p>
           Hi, I am Anja! I used to work in forein trade and supply chain.
