add classes to p

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
           <li class="salsa">Salsa</li>
           <li class="reading">Reading</li>
         </ul>
-      </fieldset>
-      <fieldset class="fieldset-contacts" id="contacts">
+
         <h2>Contact details</h2>
-        <p>Address: Kranichweg 6C, 22305 Hamburg</p>
-        <p>Mail: anja.siewert@live.de</p>
+        <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
+        <p class="p-contact">Mail: anja.siewert@live.de</p>
       </fieldset>
       <fieldset class="fieldset-links">
         <h2>Social Networks</h2>
