delete border fieldset

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         </ul>
 
         <h2>Contact details</h2>
-        <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
-        <p class="p-contact">Mail: anja.siewert@live.de</p>
+        <section class="section-contact">
+          <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
+          <p class="p-contact">Mail: anja.siewert@live.de</p>
+        </section>
       </fieldset>
       <fieldset class="fieldset-links">
         <h2>Social Networks</h2>
