--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <li class="salsa">Salsa</li>
           <li class="reading">Reading</li>
         </ul>
-
         <h2>Contact details</h2>
         <section class="section-contact">
           <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
@@ -43,7 +42,9 @@
       <fieldset class="fieldset-links">
         <h2>Social Networks</h2>
         <a href="https://github.com/AnjaSiewert"
-          ><img
+          >
+          <section class="section-socials">
+          <img
             src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
             alt="Github-logo"
             width="80px"
@@ -56,6 +57,7 @@
             width="80px"
           />LinkedIn</a
         >
+      </section>
       </fieldset>
       <fieldset class="fieldset-aboutme" id="about-me">
         <h2>About me</h2>
