--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <fieldset class="fieldset-interests">
-        <h2 class="my-interests">My interests</h2>
+        <h2 class="h2-my-interests">My interests</h2>
         <ul class="interest-list">
           <li class="travelling">Travelling</li>
           <li class="true-crime">True Crime</li>
@@ -40,7 +40,7 @@
         </section>
       </fieldset>
       <fieldset class="fieldset-links">
-        <h2>Social Networks</h2>
+        <h2 class ="h2-socials">Social Networks</h2>
         <a href="https://github.com/AnjaSiewert"
           >
           <section class="section-socials">
@@ -60,7 +60,7 @@
       </section>
       </fieldset>
       <fieldset class="fieldset-aboutme" id="about-me">
-        <h2>About me</h2>
+        <h2 class="h2-aboutme">About me</h2>
         <p>
           Hi, I am Anja! I used to work in forein trade and supply chain.
           Between my jobs I did a trip around the world and a journey to North
