--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="salsa">Salsa</li>
           <li class="reading">Reading</li>
         </ul>
-        <h2>Contact details</h2>
+        <h2 class="h2-contact-details">Contact details</h2>
         <section class="section-contact">
           <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
           <p class="p-contact">Mail: anja.siewert@live.de</p>
