add link to header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         />
         <nav class="nav-link">
           <a href="#contacts">Contact details</a>
-          <a href="#about-me">About me</a>
+          <a href="#about-me">Social networks</a>
+          <a href="#socials">About me</a>
         </nav>
       </section>
     </header>
@@ -34,7 +35,7 @@
           <li class="reading">Reading</li>
         </ul>
         <h2 class="h2-contact-details">Contact details</h2>
-        <section class="section-contact">
+        <section class="section-contact" id="contacts">
           <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
           <p class="p-contact">Mail: anja.siewert@live.de</p>
         </section>
@@ -43,7 +44,7 @@
         <h2 class="h2-socials">Social Networks</h2>
         <a href="https://github.com/AnjaSiewert"
           >
-          <section class="section-socials">
+          <section id="socials"class="section-socials">
           <img
             src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
             alt="Github-logo"
