--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           <li class="reading">Reading</li>
         </ul>
         <h2 class="h2-contact-details">Contact details</h2>
-        <section class="section-contact" id="contacts">
-          <p class="p-contact">Address: Kranichweg 6C, 22305 Hamburg</p>
-          <p class="p-contact">Mail: anja.siewert@live.de</p>
-        </section>
+        <address class="section-contact" id="contacts">
+          <a href="mailto:anja.siewert@live.de">anja.siewert@live.de</a>
+          <a href="tel:+4917632910768">0176-32910768</a>
+        </address>
       </fieldset>
       <fieldset class="fieldset-links">
         <h2 class="h2-socials">Social Networks</h2>
