--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <fieldset class="fieldset-aboutme" id="about-me">
         <h2 class="h2-aboutme">About me</h2>
         <p>
-          Hi, I am Anja! I used to work in forein trade and supply chain.
+          Hi, I am Anja! I used to work in foreign trade and supply chain.
           Between my jobs I did a trip around the world and a journey to North
           America for a few months.
         </p>
