--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
         <h2 class="h2-contact-details">Contact details</h2>
         <address class="section-contact" id="contacts">
-          <a href="mailto:anja.siewert@live.de">anja.siewert@live.de</a>
+          <a href="mailto:anja.siewert@live.de">anja.siewert@live.de</a> <br>
           <a href="tel:+4917632910768">0176-32910768</a>
         </address>
       </fieldset>
