add css grid to pictures

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a href="#contacts">Contact details</a>
           <a href="#about-me">Social networks</a>
           <a href="#socials">About me</a>
+          <a href="pictures.html">Pictures from my travels</a>
         </nav>
       </section>
     </header>
@@ -78,11 +79,14 @@
         />
         <em>Me sitting on a temple in Myanmar on my trip around the world</em>
       </fieldset>
+      <br>
+      <br>
+      <br>
     </main>
     <footer>
-      <strong
-        >Goodbye! Or as we say in my city: In Hamburg sagt man tschüß!
-      </strong>
+        <ul id="nav-bar" class="footer">
+          <li><a class="footer__link" href="index.html" aria-label="back to home screen"><img class="footer__bookmark" src="images/home.svg" alt="home icon" height="40rem"></a></li>
+          <li><a class="footer__link" href="pictures.html" aria-label="go to profile page"><img class="footer__bookmark" src="images/account-circle.svg" alt="profile icon" height="40rem"></a></a></li>
     </footer>
   </body>
 </html>
